--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#0194F3</color>
+    <color name="primary_80">#CC0194F3</color>
+    <color name="input">#CCCCCC</color>
 </resources>
