--- a/app/src/main/res/layout/activity_initial_page.xml
+++ b/app/src/main/res/layout/activity_initial_page.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textLogo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/ic_logo" />
 
     <TextView
         android:id="@+id/textLogo"
