--- a/app/src/main/res/layout/activity_add_user_info.xml
+++ b/app/src/main/res/layout/activity_add_user_info.xml
@@ -52,7 +52,7 @@
         android:id="@+id/avatar"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:src="@drawable/avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,23 +60,11 @@
         app:civ_border_width="2dp"
         app:civ_border_color="@color/input" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/changeAvatar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="112dp"
-        android:layout_marginEnd="116dp"
-        android:background="@drawable/shape_rounded_upload_camera_cccccc"
-        android:padding="10dp"
-        android:src="@drawable/ic_camera"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/container" />
-
     <EditText
         android:id="@+id/usernameInput"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="25dp"
         android:autofillHints="username input"
         android:background="@drawable/selector_rounded_input_5"
         android:ems="10"
@@ -90,67 +78,106 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/avatar" />
 
+
+    <LinearLayout
+        android:id="@+id/genderContainer"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="25dp"
+        android:weightSum="10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usernameInput">
+
+        <TextView
+            android:id="@+id/genderLabel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Giới tính:"
+            android:textSize="16sp" />
+
+        <RadioGroup
+            android:id="@+id/genderInput"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="8"
+            android:weightSum="10"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/genderMale"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="Nam"
+                android:checked="true"/>
+
+            <RadioButton
+                android:id="@+id/genderFemale"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="Nữ" />
+        </RadioGroup>
+    </LinearLayout>
+
     <EditText
         android:id="@+id/phoneInput"
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginTop="25dp"
-        android:paddingVertical="5dp"
-        android:paddingHorizontal="15dp"
+        android:autofillHints="phone number input"
         android:background="@drawable/selector_rounded_input_5"
         android:ems="10"
         android:hint="Số điện thoại"
-        android:textColorHint="@color/input"
-        android:autofillHints="phone number input"
-        android:textSize="16sp"
         android:inputType="phone"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="5dp"
+        android:textColorHint="@color/input"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@+id/genderContainer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />
-
-
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/birthContainer"
-        android:layout_width="350dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/phoneInput"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneInput">
+        app:layout_constraintStart_toStartOf="parent" >
 
         <EditText
             android:id="@+id/birthInput"
             android:layout_width="350dp"
             android:layout_height="50dp"
-            android:paddingVertical="5dp"
             android:paddingHorizontal="15dp"
-            android:background="@drawable/selector_rounded_input_5"
+            android:paddingVertical="5dp"
             android:ems="10"
             android:hint="Ngày sinh"
-            android:textColorHint="@color/input"
             android:autofillHints="birthday input"
-            android:textSize="16sp"
             android:inputType="date"
-            android:focusable="false"
-            android:clickable="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textColorHint="@color/input"
+            android:textSize="16sp"
+            android:background="@drawable/selector_rounded_input_5"
+            app:layout_constraintTop_toTopOf="@+id/birthContainer"
+            app:layout_constraintEnd_toEndOf="@+id/birthContainer"
+            app:layout_constraintStart_toStartOf="@+id/birthContainer"
+            app:layout_constraintBottom_toBottomOf="@+id/birthContainer" />
 
         <ImageButton
-            android:id="@+id/calendarView"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:id="@+id/birthCalendar"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_marginEnd="3dp"
-            android:background="@color/white"
-            android:contentDescription="calendar view"
-            app:layout_constraintBottom_toBottomOf="@+id/birthContainer"
-            app:layout_constraintEnd_toEndOf="@+id/birthContainer"
+            android:background="@android:color/transparent"
             app:layout_constraintTop_toTopOf="@+id/birthContainer"
+            app:layout_constraintEnd_toEndOf="@+id/birthContainer"
+            app:layout_constraintBottom_toBottomOf="@+id/birthContainer"
             app:srcCompat="@drawable/ic_calendar" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
